# itamx

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/itamx/: __init__.py  airlines.py  cache.py  cli.py  client.py  core.py  fleet_hints.py  keyfetch.py  models.py  render.py  request_options.py  search_builder.py  validation.py
src/itamx/data/: airlines.json
src/itamx/mcp/: __init__.py  _entry.py  server.py  service.py
tests/: conftest.py  test_live_smoke.py  test_mcp_service.py  test_regressions.py  test_response_fixtures.py  test_smoke.py
tests/fixtures/: search_response.json
