[project]
name = "itamx"
version = "0.2.0"
description = "CLI for ITA Matrix airfare search (reverse-engineered JSON API)"
readme = "README.md"
authors = [
    { name = "YogevKr", email = "yogev@sawmills.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
itamx = "itamx.cli:app"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"
